@startuml

class Competition {
   Long : competitionId
   String : name
}

class Team {
   Long : teamId
   String : teamName
}

class Phase {
   String : phaseName
   int : level
   Set<Node> : nodes
   Competition : competition
}

class Node {
   Long: nodeId
   Node : rightnode
   Node : leftNode
   Node : parentNode
   Match : curMatch
   Phase : curPhase
}

class Match {
    Long : matchid
    Team : team1
    Team : team2
    int : pointsTeam1
    int : pointsTeam2
}

Phase "*" -up-> "1"  Competition: has <
Node "*" --> "1"  Node: has
Node "*" --> "1"  Node: has
Node "*" --> "1"  Node: has
Phase "1" -right-> "*"  Node: has
Node "*" --> "1" Match : points at >
Match "1" -> "2" Team : has

@enduml